# rusty-wit-gui

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
data/: sudo-askpass.osascript-en.js
src/: download.rs  drives.rs  main.rs  util.rs
ui/: appwindow.slint
