[package]
name = "rusty-wit-gui"
version = "0.2.3"
authors = ["Manuel Quarneti <hi@mq1.eu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.9", default-features = false, features = ["glow"] }
iced_aw = { version = "0.5", default-features = false, features = ["glow", "spinner"] }
anyhow = "1.0"
rfd = "0.11"
sysinfo = "0.29"
rust-ini = "0.19"
ureq = { version = "2.7", default-features = false, features = ["native-tls"] }
native-tls = "0.2"
flate2 = "1.0"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
